k8s/app/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runrun
  labels:
    app: runrun
spec:
  replicas: 2
  selector:
    matchLabels:
      app: runrun
  template:
    metadata:
      labels:
        app: runrun
    spec:
      containers:
        - name: runrun
          image: ${ECR_REPO_URI}:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
